--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Caesar Cipher</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="cipher.js"></script>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+
+  <title>Secrets Maker</title>
+</head>
+
+<body>
+  <div class="cointainer">
+    <section class="row">
+      <section class="boxer col-sm-2 col-md-6">
+        <div class="jumbotron">
+          <h1 class="display-4">Secrets maker</h1>
+          <p class="lead">Esta es una herramienta simple que convertira tus mensajes en codigo secreto, que sera revelado solo con el numero
+            llave.
+          </p>
+          <hr class="my-4">
+          <div class="input-group mb-2">
+            <input type="text" id="plainTextInput" class="form-control" placeholder="Ingresa el mensaje a convertir" aria-label="Recipient's username"
+              aria-describedby="button-addon2">
+            <input type="number" id="numberInput" class="form-control col-3" placeholder="Numero secreto" aria-label="offset by user"
+              aria-describedby="button-addon2">
+            <button id="encrypt" class="btn btn-outline-secondary" type="button" id="button-addon1">Cifra</button>
+            <button id="decrypt" class="btn btn-outline-secondary" type="button" id="button-addon1">Descifrar</button>
+          </div>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">Tu mensaje es:</span>
+            </div>
+            <textarea id="cipher" class="form-control" aria-label="With textarea"></textarea>
+          </div>
+      </section>
+    </section>
+    </div>
     <script src="index.js"></script>
-  </body>
+    <script src="cipher.js"></script>
+</body>
+
 </html>
